# pytorch_project

./: README.md
2023/3-14/: build_graph_wc.py  clean.py  clean_txt.py  crawler.py
2023/3-15/: PAT and PTQ  README.md
2023/3-16/: README.md  requirements.txt  train.py
2023/3-17/: tensorrt.md
2023/3-17/resnet_50_trt/: CMakeLists.txt  inference.py  resnet50.cpp
2023/3-17/test/resnet_50_trt/: CMakeLists.txt  resnet50.py  使用说明.doc
2023/3-21/: resnet50_ibn_a.txt
2023/3-23/: readme1.md  train.md
2023/4-07/: 20230407.R
2023/4-08/: m4.py  timefeatures.py  uea.py
2023/4-09/: losses.py  m4_summary.py  masking.py  tools.py
2023/4-10/: Label Assignment.md  data_factory.py  exp_basic.py
2023/4-11/: nn.kaining.md  test (1).ipynb
2023/4-12/: nn.ReplicationPad1d.md  unfold.md
2023/4-13/: attention.ipynb  torch.einsum().md
2023/4-17/: YOLOv6-3.0中文版本.md
2023/5-25/: 5-25.ipynb
2023/5-26/: 5-26.ipynb
2023/5-27/: 5-27-2.ipynb  5-27.ipynb  mnist.ipynb
2023/5-28/: 1.txt  5-28.ipynb  5-28_1.ipynb  os.md  (+1 more)
C++ studying/: ch02studying.cpp  study.cpp
Clip/: Image Caption.md
FCOS_Pytorch_case/: darknet_interface.py  train_voc.py
GAN/: Improved GAN Training.md  WGAN.md
LLM/: PaLM (Scaling Language Modeling with Pathways).md  大模型.md
fastai/: 协同过滤深潜.md
onnx/: onnx.ipynb
spider/: python爬虫从入门到进阶实例教程-代码.rar  scrapy参考代码.rar
time series/: 10-14.ipynb  data.txt  promotion_data.csv  stock_price.csv
transformer/: PaLM (Scaling Language Modeling with Pathways).md  Transformers能做什么.ipynb
transformer_beamer/: beamerthemeHeverlee.sty  科研立项.snm  科研立项.toc
(+618 files in other folders)
